[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/GameOver_A.gd" type="Script" id=1]
[ext_resource path="res://fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/moneda.png" type="Texture" id=3]
[ext_resource path="res://SFX/Clapping.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 83
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="GameOverHUD" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -231.0
margin_right = 457.0
margin_bottom = 244.0
script = ExtResource( 1 )

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1

[node name="TitleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = 139.5
margin_right = 93.0
margin_bottom = 180.5
custom_fonts/font = SubResource( 2 )
text = "VOLVER AL MENU"

[node name="RetryButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 76.5
margin_right = 93.5
margin_bottom = 117.5
custom_fonts/font = SubResource( 2 )
text = "REINTENTAR"

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 0.044
anchor_bottom = 0.028
margin_left = 312.0
margin_top = 153.0
margin_right = 344.4
margin_bottom = 167.7
custom_fonts/font = SubResource( 3 )
text = "Puntaje: "

[node name="MaxComboLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 43.5
margin_top = -84.5
margin_right = 168.5
margin_bottom = -56.5
custom_fonts/font = SubResource( 4 )
text = "Combo Max:"

[node name="Moneda" type="TextureRect" parent="."]
margin_left = 307.0
margin_top = 197.0
margin_right = 352.0
margin_bottom = 242.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MonedaLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -34.5
margin_right = 29.5
margin_bottom = -6.5
custom_fonts/font = SubResource( 4 )
text = "x"

[node name="medallaImg" type="TextureRect" parent="."]
margin_left = 530.0
margin_top = 195.0
margin_right = 570.0
margin_bottom = 235.0

[node name="ClappingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="TitleButton" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
